[gd_scene load_steps=8 format=3 uid="uid://ct4l808ib7i8p"]

[ext_resource type="Script" path="res://root.gd" id="1_pfv6b"]
[ext_resource type="Script" path="res://PannedCamera.gd" id="2_jkg75"]
[ext_resource type="Texture2D" uid="uid://4swwiwt0bldi" path="res://fog.jpg" id="3_hjclt"]
[ext_resource type="Shader" path="res://dm_shader.gdshader" id="3_kcijt"]
[ext_resource type="Shader" path="res://player_shader.gdshader" id="3_ytxac"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_xsao3"]
resource_local_to_scene = true
shader = ExtResource("3_kcijt")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lrpuh"]
shader = ExtResource("3_ytxac")

[node name="Root" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_pfv6b")

[node name="Camera" type="Camera2D" parent="."]
script = ExtResource("2_jkg75")

[node name="FileDialog" type="FileDialog" parent="."]
title = "Open a File"
initial_position = 2
size = Vector2i(600, 400)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
use_native_dialog = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="MenuBar" type="MenuBar" parent="GUI"]
top_level = true
offset_right = 40.0
offset_bottom = 40.0

[node name="File" type="PopupMenu" parent="GUI/MenuBar"]
prefer_native_menu = true
item_count = 3
item_0/text = "Load"
item_1/text = "Save"
item_1/id = 1
item_2/text = "Exit"
item_2/id = 2

[node name="Settings" type="PopupMenu" parent="GUI/MenuBar"]
auto_translate_mode = 1
prefer_native_menu = true
item_count = 1
item_0/text = "Flip circle colour"
item_0/checkable = 1

[node name="DmRoot" type="Node2D" parent="."]

[node name="Background" type="TextureRect" parent="DmRoot"]
z_index = -1
offset_right = 40.0
offset_bottom = 40.0

[node name="Fog" type="TextureRect" parent="DmRoot"]
material = SubResource("ShaderMaterial_xsao3")
offset_right = 70.0
offset_bottom = 70.0
texture = ExtResource("3_hjclt")
metadata/_edit_use_anchors_ = true

[node name="PlayerWindow" type="Window" parent="."]
title = "Player Window"
initial_position = 2
size = Vector2i(500, 500)

[node name="Camera" type="Camera2D" parent="PlayerWindow"]
script = ExtResource("2_jkg75")

[node name="PlayerRoot" type="Node2D" parent="PlayerWindow"]

[node name="Background" type="TextureRect" parent="PlayerWindow/PlayerRoot"]
z_index = -1
offset_right = 40.0
offset_bottom = 40.0

[node name="Fog" type="TextureRect" parent="PlayerWindow/PlayerRoot"]
material = SubResource("ShaderMaterial_lrpuh")
offset_right = 256.0
offset_bottom = 256.0
texture = ExtResource("3_hjclt")
metadata/_edit_use_anchors_ = true

[node name="FileDialog2" type="FileDialog" parent="."]
dialog_hide_on_ok = true
access = 2
use_native_dialog = true

[node name="FogNode" type="Node2D" parent="."]

[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
[connection signal="mouse_entered" from="GUI/MenuBar" to="." method="_on_menu_bar_mouse_entered"]
[connection signal="mouse_exited" from="GUI/MenuBar" to="." method="_on_menu_bar_mouse_exited"]
[connection signal="mouse_entered" from="GUI/MenuBar/File" to="." method="_on_file_mouse_entered"]
[connection signal="mouse_exited" from="GUI/MenuBar/File" to="." method="_on_file_mouse_exited"]
[connection signal="mouse_entered" from="GUI/MenuBar/Settings" to="." method="_on_settings_mouse_entered"]
[connection signal="mouse_exited" from="GUI/MenuBar/Settings" to="." method="_on_settings_mouse_exited"]
[connection signal="file_selected" from="FileDialog2" to="." method="_on_file_dialog_2_file_selected"]
